@@ -3,6 +3,7 @@ package kuit.project.beering.service;
 import kuit.project.beering.domain.*;
 import kuit.project.beering.domain.Record;
 import kuit.project.beering.dto.request.record.AddRecordRequest;
+import kuit.project.beering.dto.response.drink.GetDrinkPreviewResponseBuilder;
 import kuit.project.beering.dto.response.record.*;
 import kuit.project.beering.repository.MemberRepository;
 import kuit.project.beering.repository.RecordAmountRepository;
@@ -58,6 +59,9 @@ public class RecordService {
             record = recordRepository.save(new Record(member, drink, date));
         }
 
+        // 빈리스트인 경우 delete Record & RecordAmounts
+        if(amounts.isEmpty()) return deleteRecordAndRecordAmounts(record);
+
         return updateRecordAmounts(record, amounts);
     }
 
@@ -79,31 +83,30 @@ public class RecordService {
     }
 
 
-    // 특정 날짜, 특정 주류의 용량기록 가져오기
-    public List<GetRecordAmountResponse> getRecordAmounts(Long memberId, Long drinkId, Timestamp date) {
-        Member member = memberRepository.findById(memberId)
-                .orElseThrow(() -> new MemberException(NONE_MEMBER));
+    // 특정 기록 상세보기
+    public GetRecordResponse getRecord(Long recordId) {
+        Record record = recordRepository.findById(recordId)
+                .orElseThrow(() -> new RecordException(NONE_RECORD));
 
-        Drink drink = drinkRepository.findById(drinkId)
+        Drink drink = drinkRepository.findById(record.getDrink().getId())
                 .orElseThrow(() -> new DrinkException(NONE_DRINK));
-
-        date = preprocessDate(date);
-
-        Record record = recordRepository.findByDateAndMemberIdAndDrinkId(date, drinkId, memberId);
-
-        if(record == null) return new ArrayList<>();
 
         List<RecordAmount> recordAmounts = recordAmountRepository.findAllByRecordId(record.getId());
 
-        return recordAmounts.stream().map(
+        List<GetRecordAmountResponse> amountResponses = recordAmounts.stream().map(
                 recordAmount -> GetRecordAmountResponse.builder()
                         .recordAmountId(recordAmount.getId())
                         .quantity(recordAmount.getQuantity())
                         .volume(recordAmount.getVolume())
                         .build()
-                ).collect(Collectors.toList());
+                ).toList();
+
+        return new GetRecordResponse(
+                GetDrinkPreviewResponseBuilder.build(drink),
+                amountResponses);
     }
 
+    // 특정 날짜의 기록 리스트
     public List<GetRecordsResponse> getRecords(Long memberId, Timestamp date) {
         Member member = memberRepository.findById(memberId)
                 .orElseThrow(() -> new MemberException(NONE_MEMBER));
@@ -119,6 +122,23 @@ public class RecordService {
                         .totalVolume(sumVolume(record)).build())
                 .toList();
 
+    }
+
+
+    public BaseResponseStatus deleteRecord(Long recordId) {
+        Record record = recordRepository.findById(recordId)
+                .orElseThrow(() -> new RecordException(NONE_RECORD));
+
+        return deleteRecordAndRecordAmounts(record);
+    }
+
+    private BaseResponseStatus deleteRecordAndRecordAmounts(Record record) {
+        List<Long> recordAmountIds = recordAmountRepository.findAllByRecordId(record.getId())
+                                    .stream().map(RecordAmount::getId).toList();
+
+        recordAmountRepository.deleteAllByRecordAmountIds(recordAmountIds);
+        recordRepository.deleteAllByRecordId(record.getId());
+        return SUCCESS_DELETE_RECORD;
     }
 
     private Integer sumVolume(Record record) {
